Core/objects/StorageEvent__e/StorageEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event to invoke storage management operations based off trailheadapp__Debug_Log__c records.</description>
    <label>Storage Event</label>
    <pluralLabel>Storage Events</pluralLabel>
</CustomObject>