Core/objects/StorageEvent__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>DML action that should be taken by platform event trigger.</description>
    <label>Action</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>