Core/objects/StorageEvent__e/fields/ConditionField__c.field-meta.xml
<CustomField>
    <fullName>ConditionField__c</fullName>
    <description>The (optional) field that will be used to filter records of specified object to determine whether they undergo the specified action.</description>
    <label>Condition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>