Core/objects/StorageEvent__e/fields/ConditionOperator__c.field-meta.xml
<CustomField>
    <fullName>ConditionOperator__c</fullName>
    <description>The (optional) operator that will be used to filter records of specified object to determine whether they undergo the specified action.</description>
    <label>Condition Operator</label>
    <length>8</length>
    <type>Text</type>
</CustomField>