Core/objects/StorageEvent__e/fields/ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>ConditionValue__c</fullName>
    <description>The (optional) value that will be used to filter records of specified object to determine whether they undergo the specified action.</description>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>